kubernetes_resources/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sonarr-service
  name: sonarr
  namespace: jellyfin
spec:
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: sonarr
  type: ClusterIP
